--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
   <script><%= htmlWebpackPlugin.options.script %></script>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app" class="text-base"></div>
 </body>
 </html>
